BUG: heavy JS errors with IE 6 and 7 caused by JS function addLoadEvent in combination with YUI  - continuous use of YUI's YAHOO.util.Event.onDOMReady in admin  - addLoadEvent will be replaced in 3.2.0 BUG: admin crashed in IE 6 and 7 due to missing JS dependencies for dragndrop (dragndrop-min.js was loaded to late)  - JS dependencies and loading should be optimized in 3.2.0 BUG: Adminwidget boxes exploded in IE -> overflow: hidden

--- a/modul_system/admin/skins/kajona_v3/styles.css
+++ b/modul_system/admin/skins/kajona_v3/styles.css
@@ -585,6 +585,11 @@ h2 {
     width: 225px;
 }
 
+.adminwidget .bd .c {
+	overflow: hidden;
+	width: 225px;
+}
+
 .adminwidgetColumn {
 	padding: 0 0 10px 0;
 	margin: 0;
